2007-04-26  Matt Perry  <mpComplete@gmail.com>

        Reviewed and landed by Alexey.

        http://bugs.webkit.org/show_bug.cgi?id=13495
        Crash when referencing an undefined entity in an XHTML document

        Test: fast/parser/badentity.xhtml

        * dom/XMLTokenizer.cpp:
        (WebCore::getEntityHandler): Check for a NULL returned from getXHTMLEntity

2007-04-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Hyatt.

        <rdar://problem/4851944>
        REGRESSION: With TOT, BMP images can no longer be opened in the browser window
        
        On Tiger, the MIME type for the com.microsoft.bmp UTI isn't in the registry, so add it manually.
        
        * platform/MimeTypeRegistry.cpp:
        (WebCore::initialiseSupportedImageMIMETypes):

2007-04-26  David Hyatt  <hyatt@apple.com>

        Fix for bug 13503, invalidateContainingBlockPrefWidths is 15% of the
        nesting PLT.  Avoid O(n^2) behavior by including inlines in the minmax
        dirty chain.

        Reviewed by kevin

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::calcInlinePrefWidths):
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::setPrefWidthsDirty):
        (WebCore::RenderObject::invalidateContainerPrefWidths):
        * rendering/RenderObject.h:

2007-04-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        <rdar://problem/5067925>
        Reproducible crash (infinite recursion) with a layout test that submits on unload (13078)
        
        Ask the document loader whether it's loading the main resource, since there are cases where the frame 
        loader's variable isn't updated correctly.
        
        In the distant future, the frame loader shouldn't have an instance variable but this is the least intrusive fix for now.
        
        I couldn't come up with a good test case for this since it requires running three tests in a row and scheduleLoad didn't work. Also,