@@ -1,3 +1,13 @@
+2007-04-26  David Hyatt  <hyatt@apple.com>
+
+        Fix for 13509.  Don't recur to parent inline flows if they have been
+        marked as needing layout themselves.
+
+        Reviewed by adele
+
+        * rendering/RenderFlow.cpp:
+        (WebCore::RenderFlow::dirtyLinesFromChangedChild):
+
 2007-04-26  Matt Perry  <mpComplete@gmail.com>
 
         Reviewed and landed by Alexey.
